feat(g1): G1 parity-with-ZGC graduate (argus g1 + diagnostics/g1 + 3 doctor rules + score branch) (#238)
* feat(g1): G1GC parity-with-ZGC graduate — argus g1 command + dedicated diagnostics + doctor rules + score branch

Closes the longstanding asymmetry where ZGC had deep CLI-level diagnostics
(`argus zgc`, `diagnostics/zgc/` package, 2 doctor rules, ZGC-aware score
weighting) while G1 — the default collector on JDK 9–20 and still the most
common production GC — was treated as a generic case.

Mirrors the ZGC blueprint exactly:

New CLI command
- `argus g1 <PID>` with single-shot / `--save` / `--diff` / `--watch[=N]`
  / `--interval=N` / `--duration=N` modes (same shape as `argus zgc`).
- JMX pre-flight refuses non-G1 targets with a clear "use 'argus gc' instead"
  message; reads region size, MaxGCPauseMillis, IHOP, and adaptive-IHOP flag
  via Runtime.InputArguments.
- HEALTHY / WARNING / UNHEALTHY verdict with G1-specific reasons (mixed
  starvation, IHOP mistiming, humongous cycles, max pause > 2 × target,
  Full GC, evacuation failure).

New diagnostics package (`argus-diagnostics/src/main/java/io/argus/diagnostics/g1/`)
- `G1Diagnosis`     — model + verdict (identity, heap, regions, cycles, evac,
  MMU, IHOP, humongous hotspots, derived booleans).
- `G1JfrCollector`  — subscribes 7 G1-specific JFR events: G1GarbageCollection,
  G1HeapSummary, G1EvacuationYoung/OldStatistics, G1MMU, G1AdaptiveIHOP,
  GarbageCollection (Full GC + Mixed labels for older JDKs), and
  ObjectAllocationOutsideTLAB (humongous-class hotspots gated on
  bytes ≥ regionSize/2).
- `G1Baseline`      — properties save/load + INFO/WARN/REGRESSION severity diff
  (newly-present Full GC, evac failure, mixed starvation → REGRESSION; max
  pause +50% or MMU −20% → REGRESSION).

New doctor rules (snapshot-derivable only)
- `G1FullGcRule`              (CRITICAL): G1 Old Generation count > 0.
- `G1RegionSizeRule`          (WARNING):  heap > 32 GB without explicit
  -XX:G1HeapRegionSize, or tiny regi